# sqlalchemy-sqlean

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  cliff.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: constraints.txt  release.yaml  test.yaml
src/sqlean_driver/: __about__.py  __init__.py  custom_types.py
tests/: conftest.py  test_driver.py  test_types.py
